Added recipe store.

--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item 
-      *ngFor="let recipeElm of recipes; let i = index"
+      *ngFor="let recipeElm of (recipeState | async).recipes; let i = index"
       [recipe]="recipeElm"
       [index]="i"></app-recipe-item>
   </div>
